Try to build chart examples before project

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
-  text-align: center;
+  margin: 0 auto;
+  margin-top: 2rem;
+  justify-content: center;
+  background-color: #282c34;
+  width: 80%;
+  height: 80%;
 }
 
 .App-logo {
