--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 .App {
   margin: 0 auto;
   margin-top: 2rem;
+  display: flex;
   justify-content: center;
+  text-align: center;
   background-color: #282c34;
-  width: 80%;
-  height: 80%;
 }
 
 .App-logo {
